# education-backend

./: .deepsource.toml  .dockerignore  .editorconfig  .flake8  .gitignore  .hadolint.yaml  .isort.cfg  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  Procfile  README.md  compose.yml  conftest.py  dev-requirements.in  dev-requirements.txt  docker-compose.yml  mypy.ini  pyproject.toml  pyproject.toml.old  renovate.json  requirements.in  requirements.txt  todo.txt
.circleci/: config.yml  known_hosts
.devcontainer/: Dockerfile  devcontainer.json
.etc/ca-certificates/russian/: russian_trusted_root_ca_gost_2025_pem.crt  russian_trusted_root_ca_pem.crt  russian_trusted_sub_ca_2024_pem.crt  russian_trusted_sub_ca_gost_2025_pem.crt  russian_trusted_sub_ca_pem.crt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  claude.yml  codeql-analysis.yml  crossplatform.yml  nightly.yml
src/: conftest.py  manage.py  mypy.ini  pytest.ini  test_order_factory.py
src/a12n/: anonymizers.py  apps.py  jwt.py  models.py  urls.py  utils.py
src/a12n/api/: forms.py  serializers.py  throttling.py  views.py
src/a12n/migrations/: 0001_initial.py  0002_PasswordlessTokensUsedDate.py
src/a12n/signals/: handlers.py
src/a12n/tests/: conftest.py  tests_passwordless_token_absolute_url.py  tests_passwordless_tokens_creation.py
src/amocrm/: apps.py  exceptions.py  factory.py  ids.py  tasks.py  types.py
src/amocrm/cache/: catalog_id.py  contact_fields_ids.py  lead_b2b_pipeline_statuses_ids.py  lead_b2c_pipeline_id.py  lead_b2c_pipeline_statuses_ids.py  lead_pipeline_id.py  product_fields_ids.py
src/amocrm/client/: __init__.py  client.py  http.py
src/amocrm/dto/: __init__.py  base.py  catalogs.py  customer.py  group.py  groups.py  lead.py  pipeline.py  pipelines.py  product.py  transaction.py
src/amocrm/entities/: __init__.py  base.py  contact.py  customer.py
src/amocrm/ids/: catalog_id.py  contact_fields_ids.py  lead_b2c_pipeline_id.py  product_fields_ids.py
src/amocrm/migrations/: 0001_AddAmoCRMUser.py  0002_AddAmoCRMGroup_and_Course.py  0004_Add_AmoCRM_leads_and_transactions.py  0005_Add_lead_and_transaction_to_Order.py  0006_Drop_o2o_properties_from_amocrm_lead_and_transaction.py  0007_Move_contact_id_to_AmoCRMUser.py  0009_Move_amocrm_id_into_main_Group_model.py
src/amocrm/models/: __init__.py  amocrm_course.py  amocrm_order_lead.py  amocrm_order_transaction.py  amocrm_product_group.py  amocrm_user.py  amocrm_user_contact.py
src/amocrm/services/: __init__.py  access_token_getter.py  amocrm_products_catalog_getter.py  contact_creator.py  course_creator.py  course_pusher.py  course_updater.py  group_pusher.py  product_catalog_fields_ids_manager.py  product_catalog_fields_manager.py  product_groups_updater.py  products_catalog_getter.py  products_catalog_id_getter.py  token_manager.py  user_pusher.py
src/amocrm/tests/: conftest.py  tests_access_token_getter.py  tests_course_creator.py  tests_create_customers.py  tests_http.py  tests_products_catalog_getter.py  tests_refresh_token.py  tests_token_manager.py  tests_update_customer.py
src/app/: .env.ci  anonymizers.py  banking.py  celery.py  current_user.py  exceptions.py  factory.py  files.py  helpers.py  mailjet.py  markdown.py  models.py  pagination.py  permissions.py  pricing.py  renderers.py  s3.py  sentry_exception_handler.py  serializers.py  services.py  settings.py  tasks.py  tg.py  throttling.py  types.py  urls.py  validators.py  views.py  viewsets.py  wsgi.py
src/app/admin/: __init__.py  decorators.py  filters.py  mixin.py  model_admin.py  widgets.py
src/app/api/: mixins.py
src/app/clickmeeting/: __init__.py  client.py  http.py  tst.py
src/app/conf/: api.py  auth.py  boilerplate.py  cache.py  celery.py  db.py  debug_toolbar.py  email.py  environ.py  features.py  healthchecks.py  http.py  i18n.py  installed_apps.py  markdown.py  media.py  middleware.py  sentry.py  static.py  storage.py  tags.py  templates.py  timezone.py  vat.py
src/auth0/: apps.py  jwks.json  user.py  utils.py
src/banking/: apps.py  base.py  definitions.py  models.py  price_calculator.py  selector.py  tasks.py  urls.py  zero_price_bank.py
src/chains/: admin.py  apps.py  models.py  tasks.py
src/core/: .env.ci  celery.py  contextmanagers.py  current_user.py  exceptions.py  factory.py  files.py  helpers.py  markdown.py  models.py  permissions.py  prosemirror.py  renderers.py  request.py  serializers.py  services.py  settings.py  storages.py  throttling.py  types.py  validators.py  video.py  views.py  viewsets.py  wsgi.py
src/courses/: admin.py  models.py
src/diplomas/: admin.py  anonymizers.py  apps.py  factory.py  models.py  tasks.py  urls.py
src/homework/: __init__.py  admin.py  anonymizers.py  apps.py  models.py  tasks.py  urls.py
src/magnets/: admin.py  apps.py  creator.py  models.py  urls.py
src/mailing/: anonymizers.py  apps.py  backends.py  configuration.py  helpers.py  owl.py  tasks.py
src/notion/: admin.py  apps.py  block.py  cache.py  client.py  exceptions.py  helpers.py  models.py  page.py  rewrite.py  tasks.py  types.py  urls.py
src/onetime/: admin.py  apps.py  models.py
src/orders/: admin.py  anonymizers.py  apps.py  creator.py  exceptions.py  factory.py  fields.py  human_readable.py  models.py  tasks.py  urls.py
src/products/: apps.py  factory.py  fixtures.py  tasks.py  urls.py
src/shipping/: apps.py  factory.py  mixins.py  test.py
src/stripebank/: apps.py  bank.py  models.py  stripe_router.py  webhook_handler.py
src/studying/: __init__.py  admin.py  apps.py  factory.py  models.py  shipment_factory.py  urls.py
src/tinkoff/: anonymizers.py  apps.py  bank.py  client.py  credit.py  dolyame.py  exceptions.py  models.py  t.py  tasks.py  token_validator.py
src/triggers/: apps.py  base.py  factory.py  helpers.py  models.py  record_feedback.py  record_purchase.py  started_purchase.py  tasks.py
src/users/: admin.py  anonymizers.py  apps.py  creator.py  factory.py  fixtures.py  models.py  tasks.py  urls.py
tests/: conftest.py  test_order_factory.py
tests/factories/: core.py
(+2547 files in other folders)
